Added Tab Saver and solved bug #1

--- a/Project3_ChromeExtension/index.html
+++ b/Project3_ChromeExtension/index.html
@@ -11,6 +11,7 @@
 <body>
   <input type="text" id="inputElement" required>
   <button id="inputButton">Save Input</button>
+  <button id="saveTabButton">Save Tab</button>
   <button id="deleteButton">Delete Links</button>
   <ul id="linkListElement"></ul>
 </body>
